# NL2SQL

./: README.md  cheat_sheet.txt  mermaid  pyproject.toml
app/: main.py
app/tests/: test_config.py  test_nlq.py  test_pandasai_env.py
app/ui/: streamlit_app.py
app/utilities/: config.py  generator.py  llm.py  nlq.py  pandasai_integration.py  prompt.py  sql_executor.py  validator.py
app/utilities/db/: engine.py  schema.py
