[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E","F","I","UP","B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_any_generics = true

[tool.poetry]
name = "nlq-sql"
version = "0.1.0"
description = "Streamlit app to query SQL databases using natural language (PandasAI + Azure OpenAI + Postgres)"
authors = ["Ammar <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "2.1.3"
pandas = "2.2.3"
pydantic = ">=2.7"


# Web UI and data
streamlit = "^1.39.0"
pandasai = "*"

# Database
SQLAlchemy = "*"
psycopg2-binary = "^2.9.9"

# Environment + config
python-dotenv = "^1.0.1"

# Azure OpenAI SDK
openai = "^1.100.0"
tiktoken = "^0.7.0"
sqlparse = "^0.5.3"
pydantic-settings = ">=2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --cov=app"
